step-02 演示代码优化

--- a/step-02/src/js/components/CssTest/index.scss
+++ b/step-02/src/js/components/CssTest/index.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/mixins.scss";
+
 $blue: #056ef0;
 $baseFontSize:  24px !default;
 $column: 200px;
@@ -86,4 +88,11 @@ input::placeholder {
 
 .myUl li:at-most(4) {
   color: red;
+}
+
+.myBtn {
+  color: red;
+}
+.nihaoa {
+  @mixin btn 200px;
 }
