step-02 演示代码优化

--- a/step-02/src/js/components/CssTest/index.scss
+++ b/step-02/src/js/components/CssTest/index.scss
@@ -1,98 +1,5 @@
 @import "../../../styles/mixins.scss";
 
-$blue: #056ef0;
-$baseFontSize:  24px !default;
-$column: 200px;
-
-@alias {
-  fs: font-size;
-  br: border-radius;
-}
-.toYellow {
-  color: yellowgreen;
-}
-.toRed2 {
-  color: red;
-}
-.btn {
-  padding: 0.2rem 0.4rem;
-  color: #fff;
-  background: #00A283;
-  &:hover {
-    background: #0b97c4;
-  }
-}
-
-@define-mixin center-block {
-  background: #000;
-  &:before,
-  &:after {
-    content: '';
-    display: table;
-  }
-  &:after {
-    clear: both;
-  }
-}
-
-
-.myUlhj {
-  @mixin center-block;
-  li {
-    background: red;
-    margin-bottom: 10px;
-    fs: 25px;
-  }
-}
-input::placeholder {
-  color: red;
-  opacity: 0.8;
-}
-.myDiv {
-  width: calc(4 * $column);
-  @if 3 < 5 {
-    background: green;
-  } @else {
-    background: blue;
-  }
-}
-.search {
-  color: #00ccff;
-}
-
-//noinspection ALL
-.myDiv2 {
-  margin: 20px;
-  padding: @margin;
-  position: relative 20% auto;
-}
-
-//noinspection ALL
-@define-extend bgGreen {
-  background: green;
-}
-
-.noticeGlear {
-  @extend bgGreen;
-}
-
-.parent {
-  background: white;
-
-  @at-root{
-    .child {
-      background: black;
-    }
-  }
-}
-
-.myUl li:at-most(4) {
-  color: red;
-}
-
-.myBtn {
-  color: red;
-}
-.nihaoa {
-  @mixin btn 200px;
+.btnTest {
+  @mixin btn 200px, 40px;
 }
