--- a/step-02/src/styles/mixins.scss
+++ b/step-02/src/styles/mixins.scss
@@ -16,4 +16,6 @@ $border: 1px solid #ddd,
   border-radius: $border-radius;
   border: $border;
   cursor: pointer;
+  outline: none;
+  text-align: center;
 }
