step-02 演示代码优化

--- a/step-02/src/styles/app.scss
+++ b/step-02/src/styles/app.scss
@@ -154,6 +154,10 @@ a {
   margin-bottom: 0.1rem;
 }
 
+.mb5 {
+  margin-bottom: 5px;
+}
+
 .ml20 {
   margin-left: 0.2rem;
 }
@@ -174,7 +178,7 @@ a {
   margin-right: 5px;
 }
 
-.pad2 {
+.p20 {
   padding: 0.2rem;
 }
 
