--- a/step-02/src/js/components/bigComponent/bigOne/BigOne.scss
+++ b/step-02/src/js/components/bigComponent/bigOne/BigOne.scss
@@ -2,8 +2,8 @@
   color: green;
 }
 .bigImg {
-  width: 7.5rem;
-  height: 4.2rem;
+  width: 748px;
+  height: 422px;
   background: url("../../../../images/big.png");
   background-size: 100% 100%;
 }
