--- a/step-03/src/js/components/Nav/index.scss
+++ b/step-03/src/js/components/Nav/index.scss
@@ -2,7 +2,7 @@
   background-color: #f5f5f5;
   height: 50px;
   position: fixed;
-  max-width: 640px;
+  max-width: 750px;
   min-width: 320px;
   z-index: 99;
   bottom: 0;
@@ -19,5 +19,8 @@
   content: "\e936";
 }
 .navFour i:before {
+  content: "\e939";
+}
+.navFive i:before {
   content: "\e913";
 }
