--- a/step-03/src/styles/animations.scss
+++ b/step-03/src/styles/animations.scss
@@ -25,3 +25,26 @@
   transform:   translate(250px,0);
   transform: translate3d(250px,0,0);
 }
+
+// 首页导航过场动画
+.swap-enter {
+  opacity: 0.01;
+  transform: translateX(5em);
+  transition: all .5s ease-out;
+}
+
+.swap-enter.swap-enter-active {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.swap-leave {
+  opacity: 1;
+  transform: translateX(0);
+  transition: all .5s ease-in;
+}
+
+.swap-leave.swap-leave-active {
+  opacity: 0;
+  transform: translateX(-5em);
+}
