--- a/step-03/src/styles/app.scss
+++ b/step-03/src/styles/app.scss
@@ -421,6 +421,10 @@ img {
 .absolute {
   position: absolute;
 }
+.pageAnimate {
+  position: absolute;
+  width: 100%;
+}
 
 .fixed {
   position: fixed;
