--- a/step-03/src/index.ejs
+++ b/step-03/src/index.ejs
@@ -39,6 +39,6 @@
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-<div id="app"></div>
+<div id="app" class="box"></div>
 </body>
 </html>
