--- a/step-03/src/styles/antdStyleReset.scss
+++ b/step-03/src/styles/antdStyleReset.scss
@@ -1,8 +1,38 @@
+//重置antd-mobile样式
 a:hover, a:active {
   color: #1BBC9B;
 }
 
-html.pixel-ratio-3 .am-action-sheet-button-list > li:before {
-  transform: scaleY(5);
-  border-color: red;
+// 重写radio样式
+.am-radio.am-radio-checked .am-radio-inner:after {
+  position: absolute;
+  z-index: 100;
+  content: '';
+  display: block;
+  width: 10px;
+  height: 10px;
+  left: 5px;
+  top: 5px;
+  background: #1abc9c;
+  border-radius: 50%;
+  border: none;
+}
+
+.am-radio-inner:before {
+  position: absolute;
+  content: '';
+  display: block;
+  width: 20px;
+  height: 20px;
+  border: 1px solid #999;
+  background: #fff;
+  left: 0;
+  top: 0;
+  z-index: 100;
+  border-radius: 50%;
+  outline: 0;
+}
+
+.am-radio-inner {
+  right: 3px;
 }
