--- a/step-03/src/js/components/Nav/index.scss
+++ b/step-03/src/js/components/Nav/index.scss
@@ -1,13 +1,12 @@
 .root {
   background-color: #f5f5f5;
-  height: 50px;
+  height: 118px;
   position: fixed;
-  max-width: 750px;
-  min-width: 320px;
   z-index: 99;
   bottom: 0;
   width: 100%;
   display: flex;
+  border-top: 1px solid #ccc;
 }
 
 .navOne, .navTwo, .navThree, .navFour, .navFive {
