--- a/step-03/src/styles/app.scss
+++ b/step-03/src/styles/app.scss
@@ -21,19 +21,8 @@ $link-visited: #333; //设置链接访问后的颜色
 $main-color: #1BBC9B; //主体颜色
 
 // 字体
-$font-family-zh: "Hiragino Sans GB", "Microsoft YaHei", sans-serif !default;
+$font-family-zh: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
 $font-family-en: Arial, sans-serif !default;
-
-// 字体大小
-$font-size-10: 10px !default;
-$font-size-12: 12px !default;
-$font-size-13: 13px !default;
-$font-size-14: 14px !default;
-$font-size-15: 15px !default;
-$font-size-16: 16px !default;
-$font-size-17: 17px !default;
-$font-size-18: 18px !default;
-$font-size-24: 24px !default;
 
 // 盒子模型
 $box-model: border-box !default;
@@ -45,10 +34,6 @@ $z-150: 150;
 $z-200: 200;
 $z-250: 250;
 $z-max: 999999; //为了应付某些插件z-index 值过高的问题
-
-// 页面尺寸
-$web-max-width: 750px !default;
-$web-min-width: 320px !default;
 
 // 全局设置
 // --------------------------------------------------
@@ -96,7 +81,7 @@ body {
   line-height: 1.5;
   color: $body-color;
   background-color: $body-bg;
-  font-size: 12px;
+  font-size: 28px;
 }
 
 // Links
@@ -112,39 +97,23 @@ a {
   }
 }
 
-//字体颜色
-.main-color {
-  color: $main-color;
-}
+// 字体颜色
+.main-color {  color: $main-color;  }
 
-// 手机端1像素边的设置
-// 默认顶部
-.one-px-border:before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: auto;
-  right: auto;
-  height: 2px;
-  width: 100%;
-  background-color: transparent;
-  border-top: 1px solid #ccc;
-  display: block;
-  z-index: 15;
-  transform-origin: 50% 0;
-  transform: scaleY(0.33);
-}
-
-//背景颜色
+// 请保证你的设计稿为750px宽，如果有其余字体大小，请在私有样式中设置
+.font-24 {font-size: 24px;}
+.font-26 {font-size: 26px;}
+.font-28 {font-size: 28px;}
+.font-30 {font-size: 30px;}
+.font-32 {font-size: 32px;}
+.font-34 {font-size: 34px;}
+.font-36 {font-size: 36px;}
+.font-38 {font-size: 38px;}
+.font-40 {font-size: 40px;}
 
 // 设置block
 .block {
   display: block;
-}
-
-.inblock {
-  display: inline-block;
 }
 
 .show {
@@ -155,109 +124,9 @@ a {
   display: none;
 }
 
-//设置间距
-.mt20 {
-  margin-top: 0.2rem;
-}
-
-.mt10 {
-  margin-top: 0.1rem;
-}
-
-.mb20 {
-  margin-bottom: 0.2rem;
-}
-
-.mb10 {
-  margin-bottom: 0.1rem;
-}
-
-.mb5 {
-  margin-bottom: 5px;
-}
-
-.ml20 {
-  margin-left: 0.2rem;
-}
-
-.ml5 {
-  margin-left: 5px;
-}
-
-.mr20 {
-  margin-right: 0.2rem;
-}
-
-.mr10 {
-  margin-right: 0.1rem;
-}
-
-.mr5 {
-  margin-right: 5px;
-}
-
-.p20 {
-  padding: 0.2rem;
-}
-
-.plr20 {
-  padding-left: 0.2rem;
-  padding-right: 0.2rem;
-}
-
-.plr30 {
-  padding-left: 0.3rem;
-  padding-right: 0.3rem;
-}
-
-.ptb20 {
-  padding-top: 0.2rem;
-  padding-bottom: 0.2rem;
-}
-
-.ptb10 {
-  padding-top: 0.1rem;
-  padding-bottom: 0.1rem;
-}
-
-.pt20 {
-  padding-top: 0.2rem;
-}
-
-.pl10 {
-  padding-left: 10px;
-}
-
-.pr10 {
-  padding-right: 10px;
-}
-
-.pr5 {
-  padding-right: 5px;
-}
-
-.line15 {
-  line-height: 1.5;
-}
-
-.line30 {
-  line-height: 3;
-}
-
-.line40 {
-  line-height: 40px;
-}
-
-.lb0 {
-  left: 0;
-  bottom: 0;
-}
-
 // 最外层页面设置
 .box {
   width: 100%;
-  max-width: $web-max-width;
-  min-width: $web-min-width;
   margin-left: auto;
   margin-right: auto;
   position: relative;
@@ -268,8 +137,6 @@ a {
   position: fixed;
   z-index: $z-50;
   width: 100%;
-  max-width: $web-max-width;
-  min-width: $web-min-width;
   top: 0;
   bottom: 0;
   background: rgba(0, 0, 0, .6);
@@ -288,8 +155,6 @@ a {
 
 .fixed-bottom {
   position: fixed;
-  max-width: $web-max-width;
-  min-width: $web-min-width;
   z-index: 99;
   bottom: 0;
   width: 100%;
@@ -436,43 +301,6 @@ img {
   overflow: hidden;
 }
 
-// 字体大小
-.font-size-10 {
-  font-size: $font-size-10;
-}
-
-.font-size-12 {
-  font-size: $font-size-12;
-}
-
-.font-size-13 {
-  font-size: $font-size-13;
-}
-
-.font-size-14 {
-  font-size: $font-size-14;
-}
-
-.font-size-15 {
-  font-size: $font-size-15;
-}
-
-.font-size-16 {
-  font-size: $font-size-16;
-}
-
-.font-size-17 {
-  font-size: $font-size-17;
-}
-
-.font-size-18 {
-  font-size: $font-size-18;
-}
-
-.font-size-24 {
-  font-size: 24px;
-}
-
 // 元素绝对定位的垂直水平居中
 .absolute-center {
   position: absolute;
@@ -606,134 +434,3 @@ input[type="radio"]:checked:before {
   border-radius: 50%;
   border: none;
 }*/
-
-// 1px边框解决方案
-.ui-border-t {
-  border-top: 1px solid #dcdcdc;
-}
-
-.ui-border-b {
-  border-bottom: 1px solid $border-color;
-}
-
-.ui-border-tb {
-  border-top: $border-color 1px solid;
-  border-bottom: $border-color 1px solid;
-  background-image: none;
-}
-
-.ui-border-l {
-  border-left: 1px solid $border-color;
-}
-
-.ui-border-r {
-  border-right: 1px solid $border-color;
-}
-
-.ui-border {
-  border: 1px solid $border-color;
-}
-
-.ui-border-radius-2 {
-  border: 1px solid $border-color;
-  border-radius: 2px;
-}
-
-.ui-border-radius-4 {
-  border: 1px solid $border-color;
-  border-radius: 4px;
-}
-
-@media screen and (-webkit-min-device-pixel-ratio: 2) {
-  .ui-border-radius-2, .ui-border-radius-4 {
-    position: relative;
-    border: 0;
-  }
-
-  .ui-border-radius-2:before, .ui-border-radius-4:before {
-    content: "";
-    width: 200%;
-    height: 200%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    border: 1px solid $border-color;
-    -webkit-transform: scale(0.5);
-    -webkit-transform-origin: 0 0;
-    padding: 1px;
-    -webkit-box-sizing: border-box;
-    pointer-events: none;
-  }
-  .ui-border-radius-2:before {
-    border-radius: 4px;
-  }
-  .ui-border-radius-4:before {
-    border-radius: 8px;
-  }
-}
-
-@media screen and (-webkit-min-device-pixel-ratio: 2) {
-  .ui-border {
-    position: relative;
-    border: 0;
-  }
-
-  .ui-border-t, .ui-border-b, .ui-border-l, .ui-border-r, .ui-border-tb {
-    border: 0;
-  }
-
-  .ui-border-t {
-    background-position: left top;
-    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.5, transparent), color-stop(0.5, $border-color), to($border-color));
-  }
-
-  .ui-border-b {
-    background-position: left bottom;
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0.5, transparent), color-stop(0.5, $border-color), to($border-color));
-  }
-
-  .ui-border-t, .ui-border-b, .ui-border-tb {
-    background-repeat: repeat-x;
-    -webkit-background-size: 100% 1px;
-  }
-
-  .ui-border-tb {
-    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.5, transparent), color-stop(0.5, $border-color), to($border-color)), -webkit-gradient(linear, left top, left bottom, color-stop(0.5, transparent), color-stop(0.5, $border-color), to($border-color));
-    background-position: top, bottom;
-  }
-
-  .ui-border-l {
-    background-position: left top;
-    background-image: -webkit-gradient(linear, right top, left top, color-stop(0.5, transparent), color-stop(0.5, $border-color), to($border-color));
-  }
-
-  .ui-border-r {
-    background-position: right top;
-    background-image: -webkit-gradient(linear, left top, right top, color-stop(0.5, transparent), color-stop(0.5, $border-color), to($border-color));
-  }
-
-  .ui-border-l, .ui-border-r {
-    background-repeat: repeat-y;
-    -webkit-background-size: 1px 100%;
-  }
-
-  .ui-border:after {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.5, transparent), color-stop(0.5, $border-color), to($border-color)), -webkit-gradient(linear, left top, right top, color-stop(0.5, transparent), color-stop(0.5, $border-color), to($border-color)), -webkit-gradient(linear, left top, left bottom, color-stop(0.5, transparent), color-stop(0.5, $border-color), to($border-color)), -webkit-gradient(linear, right top, left top, color-stop(0.5, transparent), color-stop(0.5, $border-color), to($border-color));
-    -webkit-background-size: 100% 1px, 1px 100%, 100% 1px, 1px 100%;
-    background-size: 100% 1px, 1px 100%, 100% 1px, 1px 100%;
-    -webkit-background-size: 100% 1px, 1px 100%, 100% 1px, 1px 100%;
-    background-size: 100% 1px, 1px 100%, 100% 1px, 1px 100%;
-    background-repeat: no-repeat;
-    background-position: top, right, bottom, left;
-    padding: 1px;
-    -webkit-box-sizing: border-box;
-    z-index: 10;
-    pointer-events: none;
-  }
-}
