--- a/step-03/src/styles/app.scss
+++ b/step-03/src/styles/app.scss
@@ -12,7 +12,6 @@
 @import "./mixins.scss";
 
 // 颜色设置
-$white: #fff; //白
 $border-color: #e9e9e9; //边框颜色
 $body-color: #333; //设置通用的字体颜色
 $body-bg: #f2f2f2; //设置通用的 body 背景色
@@ -100,6 +99,26 @@ a {
 // 字体颜色
 .main-color {  color: $main-color;  }
 
+// 背景颜色
+.bg-white { background-color: #fff }
+
+// 间隔
+.pt20 {
+  padding-top: 20px;
+}
+.pt30 {
+  padding-top: 30px;
+}
+.pt40 {
+  padding-top: 40px;
+}
+.pt50 {
+  padding-top: 50px;
+}
+.pt60 {
+  padding-top: 60px;
+}
+
 // 请保证你的设计稿为750px宽，如果有其余字体大小，请在私有样式中设置
 .font-24 {font-size: 24px;}
 .font-26 {font-size: 26px;}
@@ -161,20 +180,32 @@ a {
 }
 
 // 布局相关
+// 水平
+.hor {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
 // 水平居中
 .hor-center {
   display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
   justify-content: center;
 }
 // 垂直居中
 .ver-center {
   display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
   align-items: center;
 }
 
-// 水平垂直居中
+// 子元素内联垂直居中
 .center-center {
   display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
   align-items: center;
   justify-content: center;
 }
@@ -182,19 +213,19 @@ a {
 // 子元素块联水平垂直居中
 .center-center-column {
   display: flex;
-  align-items: center;
   flex-direction: column;
   flex-wrap: nowrap;
+  align-items: center;
   justify-content: center;
 }
 
 // 两边对齐
 .space-between {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
   flex-direction: row;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
 }
 
 // last-no-border
