--- a/step-03/src/js/components/FastNav/index.scss
+++ b/step-03/src/js/components/FastNav/index.scss
@@ -1,14 +1,14 @@
 .root {
   width: 24%;
-  margin-bottom: 30px;
+  margin-bottom: 0.3rem;
 }
 
 .thumb {
   display: block;
-  height: 140px;
-  width: 140px;
-  border-radius: 55px;
-  margin-bottom: 14px;
+  height: 0.94rem;
+  width: 0.94rem;
+  border-radius: 0.4rem;
+  margin-bottom: 0.2rem;
 }
 
 .title {
