--- a/step-03/src/js/components/Nav/NavLink/index.scss
+++ b/step-03/src/js/components/Nav/NavLink/index.scss
@@ -13,9 +13,9 @@
 }
 
 .ico {
-  font-size: 50px;
+  font-size: 0.42rem;
   display: block;
-  margin-bottom: 10px;
+  margin-bottom: 0.1rem;
 }
 
 .text {
