--- a/step-03/src/js/components/ShopList/index.scss
+++ b/step-03/src/js/components/ShopList/index.scss
@@ -1,8 +1,9 @@
 .root {
   display: block;
   position: relative;
-  padding: 0.15rem 0 0.1rem 0;
+  padding: 0.15rem 0.2rem;
   flex-grow:1;
+  background: #fff;
 }
 .listBox:last-child .root {
   border-bottom: none;
@@ -17,14 +18,14 @@
   display: block;
   position: absolute;
   z-index: 10;
-  left: -0.15rem;
-  top: 0.07rem;
-  width: 0.6rem;
-  height: 0.16rem;
-  line-height: 0.16rem;
+  left: -0.3rem;
+  top: 0.14rem;
+  width: 1.26rem;
+  height: 0.35rem;
+  line-height: 0.35rem;
   text-align: center;
   color: #fff;
-  font-size: 0.08rem;
+  font-size: 0.2rem;
   transform:rotateZ(315deg)
 }
 .rootOneTwo {
@@ -33,8 +34,8 @@
 }
 
 .rootTwo {
-  margin-left: 0.9rem;
-  margin-right: 0.75rem;
+  margin-left: 1.8rem;
+  margin-right: 1.5rem;
 }
 .rootTwoZero {
   font-size: 0.3rem;
@@ -61,25 +62,25 @@
   display: flex;
   align-items: center;
   line-height:1;
-  margin-bottom: 0.03rem;
+  margin-bottom: 0.1rem;
 }
 .rootTwoThrOne {
   font-size: 0.32rem;
   color: #33b433;
-  margin-right: 0.03rem;
+  margin-right: 0.06rem;
 }
 .rootTwoThrTwo {
   color: #999;
 }
 
 .rootTwoTFour {
-  height: 0.24rem;
-  line-height: 0.24rem;
+  height: 0.32rem;
+  line-height: 0.32rem;
 }
 .rootTwoTFourOne {
   font-size: 0.32rem;
   color: #848484;
-  margin-right: 0.03rem;
+  margin-right: 0.06rem;
   vertical-align: sub;
 }
 .rootTwoTFourTwo {
