--- a/step-03/src/styles/app.scss
+++ b/step-03/src/styles/app.scss
@@ -139,6 +139,11 @@ a {
   padding-top: 60px;
 }
 
+.plr20 {
+  padding-left: 0.2rem;
+  padding-right: 0.2rem;
+}
+
 // 请保证你的设计稿为750px宽，如果有其余字体大小，请在私有样式中设置
 .font-20 {font-size: 0.2rem;}
 .font-24 {font-size: 0.24rem;}
