--- a/step-03/src/js/components/ShopList/index.scss
+++ b/step-03/src/js/components/ShopList/index.scss
@@ -7,8 +7,8 @@
 
 .rootOneOne {
   display: block;
-  width: 1.6rem;
-  height: 1.2rem;
+  width: 160px;
+  height: 120px;
 }
 
 .rootOneTwoCommon {
