--- a/step-03/src/styles/antdStyleReset.scss
+++ b/step-03/src/styles/antdStyleReset.scss
@@ -3,6 +3,9 @@
   color: #1bbc9b;
   opacity: 1;
 }
+.am-navbar-light {
+  color: #1abc9c;
+}
 // 重写radio样式
 .am-radio.am-radio-checked .am-radio-inner:after {
   position: absolute;
