--- a/step-04/src/styles/animations.scss
+++ b/step-04/src/styles/animations.scss
@@ -48,3 +48,31 @@
   opacity: 0;
   transform: translateX(-5em);
 }
+
+// message 组件动画
+.message-enter {
+  opacity: 0;
+  transform:   translate(0,-25px);
+  transform: translate3d(0,-25px,0);
+}
+.message-enter.message-enter-active {
+  opacity: 1;
+  transform:   translate(0,0);
+  transform: translate3d(0,0,0);
+  transition-property: transform, opacity;
+  transition-duration: 500ms;
+  transition-timing-function: cubic-bezier(0.175, 0.665, 0.320, 1), linear;
+}
+.message-leave {
+  opacity: 1;
+  transform:   translate(0,0);
+  transform: translate3d(0,0,0);
+  transition-property: transform, opacity;
+  transition-duration: 300ms;
+  transition-timing-function: cubic-bezier(0.175, 0.665, 0.320, 1), linear;
+}
+.message-leave.message-leave-active {
+  opacity: 0;
+  transform:   translate(0,25px);
+  transform: translate3d(0,25px,0);
+}
