--- a/step-04/src/js/components/SelectMenu/ConList/index.scss
+++ b/step-04/src/js/components/SelectMenu/ConList/index.scss
@@ -22,11 +22,13 @@
 }
 
 .left {
-  flex-grow: 4;
+  flex-grow: 1;
+  flex-basis: 50%;
   background: #fff;
 }
 
 .right {
-  flex-grow: 6;
+  flex-grow: 1;
+  flex-basis: 50%;
   background: #f2f2f2;
 }
