--- a/step-04/src/js/components/Todos/Footer/index.scss
+++ b/step-04/src/js/components/Todos/Footer/index.scss
@@ -3,9 +3,14 @@
 }
 
 .filters {
-
+  margin: 20px 0;
+  font-size: 0.28rem;
 }
 
 .footer {
-  margin-top: 0.3rem;
+  margin-top: 0.28rem;
+}
+
+.clearBtn {
+  font-size: 0.3rem;
 }
