--- a/step-04/src/js/components/Todos/MainSection/index.scss
+++ b/step-04/src/js/components/Todos/MainSection/index.scss
@@ -1,8 +1,14 @@
 .root {
   width: 100%;
+  position: relative;
 }
 
 .wrap {
   max-height: 3.05rem;
   overflow-x: hidden;
+}
+
+.switch {
+  position: absolute;
+  top: -92px;
 }
