--- a/step-04/src/styles/app.scss
+++ b/step-04/src/styles/app.scss
@@ -137,6 +137,9 @@ a {
   padding-left: 0.2rem;
   padding-right: 0.2rem;
 }
+.pall {
+  padding: 0.3rem 0.2rem
+}
 
 // 请保证你的设计稿为750px宽，如果有其余字体大小，请在私有样式中设置
 .font-20 {font-size: 0.2rem;}
