--- a/step-04/src/js/components/Timer/index.scss
+++ b/step-04/src/js/components/Timer/index.scss
@@ -1,4 +1,7 @@
 .btn {
-  border: 1px solid #333;
+  border: 1px solid #666;
   border-radius: 3px;
+  padding: 15px 28px;
+  margin: 15px 25px 0 0;
+  background: #fefefe;
 }
