--- a/step-04/src/styles/app.scss
+++ b/step-04/src/styles/app.scss
@@ -133,12 +133,15 @@ a {
   padding-top: 60px;
 }
 
+// 实践证明以上间隔并无大用，还是设置最常用的几个间隔，组合用挺不错
 .plr20 {
   padding-left: 0.2rem;
   padding-right: 0.2rem;
 }
-.pall {
-  padding: 0.3rem 0.2rem
+
+.ptb30 {
+  padding-top: 0.3rem;
+  padding-bottom: 0.3rem;
 }
 
 // 请保证你的设计稿为750px宽，如果有其余字体大小，请在私有样式中设置
