--- a/step-04/src/styles/app.scss
+++ b/step-04/src/styles/app.scss
@@ -101,6 +101,10 @@ a {
   color: $main-color;
 }
 
+.color-white {
+  color: #fff;
+}
+
 .color333 {
   color: #333
 }
@@ -134,6 +138,18 @@ a {
   padding-top: 60px;
 }
 
+.mb10 {
+  margin-bottom: 0.1rem;
+}
+
+.mb20 {
+  margin-bottom: 0.2rem;
+}
+
+.mb30 {
+  margin-bottom: 0.3rem;
+}
+
 // 实践证明以上间隔并无大用，还是设置最常用的几个间隔，组合用挺不错
 .plr20 {
   padding-left: 0.2rem;
@@ -148,6 +164,10 @@ a {
 .ptb30 {
   padding-top: 0.3rem;
   padding-bottom: 0.3rem;
+}
+
+.border-bottom {
+  border-bottom: 1px solid #e9e9e9;
 }
 
 // 请保证你的设计稿为750px宽，如果有其余字体大小，请在私有样式中设置
@@ -180,7 +200,6 @@ a {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  position: relative;
 }
 
 // 半透明弹层
