--- a/step-04/src/styles/app.scss
+++ b/step-04/src/styles/app.scss
@@ -197,7 +197,7 @@ a {
 
 // 最外层页面设置
 .box {
-  width: 100%;
+  max-width: 10rem;
   margin-left: auto;
   margin-right: auto;
 }
@@ -227,6 +227,7 @@ a {
   position: fixed;
   z-index: 99;
   bottom: 0;
+  left: 0;
   width: 100%;
 }
 
