--- a/step-04/src/styles/app.scss
+++ b/step-04/src/styles/app.scss
@@ -296,6 +296,12 @@ img {
   height: auto;
 }
 
+// 这里主要应付 antd-mobile 的组件carousel 不能等比缩放的蛋疼问题
+.home-swipe {
+  height: 40.625vw;
+  max-height: 406.25px;
+}
+
 .circle {
   border-radius: 50%;
 }
