--- a/step-04/src/js/components/Todos/index.scss
+++ b/step-04/src/js/components/Todos/index.scss
@@ -3,6 +3,7 @@
   padding: 0.4rem 0.6rem;
   display: flex;
   width: 100%;
+  max-width: 10rem;
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
