--- a/step-04/src/styles/app.scss
+++ b/step-04/src/styles/app.scss
@@ -422,6 +422,14 @@ img {
   transform: translate(-50%, -50%);
 }
 
+.height100 {
+  height: 100%
+}
+
+.minheight110 {
+  min-height: 110%;
+}
+
 // flex 参考指南。http://www.ruanyifeng.com/blog/2015/07/flex-grammar.html
 // 任何一个容器都可以指定 flex 布局
 // .box-example { display: flex }
