--- a/step-02/src/js/components/CssTest/index.scss
+++ b/step-02/src/js/components/CssTest/index.scss
@@ -5,23 +5,14 @@
   span {
     line-height: 1;
   }
-  @mixin btn 200px, 0.1rem;
+  @mixin btn 200px, 10px;
   i {
     color: $main-color;
   }
   &:hover {
-    @mixin btn 200px, 0.1rem, $white, $main-color, 14px, 4px, 1px solid $main-color;
+    @mixin btn 200px, 10px, $white, $main-color, 14px, 4px, 1px solid $main-color;
     i {
       color: $white;
     }
   }
 }
-
-/*
-$width: 100%,
-$padding-tb: 0.15rem,
-$color: #333,
-$background-color: #fff,
-$font-size: 14px,
-$border-radius: 4px,
-$border: 1px solid #ddd,*/
