--- a/step-02/src/styles/mixins.scss
+++ b/step-02/src/styles/mixins.scss
@@ -1,7 +1,7 @@
 // mixins
 @define-mixin btn
 $width: 100%,
-$padding-tb: 0.15rem,
+$padding-tb: 15px,
 $color: #333,
 $background-color: #fff,
 $font-size: 14px,
@@ -9,7 +9,7 @@ $border-radius: 4px,
 $border: 1px solid #ddd,
 {
   width: $width;
-  padding: $padding-tb 0.1rem;
+  padding: $padding-tb 10px;
   color: $color;
   background-color: $background-color;
   font-size: $font-size;
