--- a/step-04/src/styles/app.scss
+++ b/step-04/src/styles/app.scss
@@ -71,8 +71,8 @@ ul, ol, li {
 
 // -webkit-tap-highlight-color 是一个 不规范的属性，它没有出现在 CSS 规范草案中。
 // 当用户点击iOS的Safari浏览器中的链接或JavaScript的可点击的元素时，覆盖显示的高亮颜色。
-html {
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+html, body {
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
