--- a/step-03/src/styles/app.scss
+++ b/step-03/src/styles/app.scss
@@ -45,6 +45,9 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
   margin: 0;
   padding: 0;
   vertical-align: baseline;
+
+  /* 在X5新内核Blink中，在排版页面的时候，会主动对字体进行放大，会检测页面中的主字体，当某一块字体在我们的判定规则中，认为字号较小，并且是页面中的主要字体，就会采取主动放大的操作。然而这不是我们想要的，可以采取给最大高度解决 */
+  max-height: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
