--- a/step-02/src/styles/mixins.scss
+++ b/step-02/src/styles/mixins.scss
@@ -1,13 +1,13 @@
 // mixins
-@define-mixin btn
-$width: 100%,
-$padding-tb: 15px,
-$color: #333,
-$background-color: #fff,
-$font-size: 14px,
-$border-radius: 4px,
-$border: 1px solid #ddd,
-{
+@mixin btn(
+  $width: 100%,
+  $padding-tb: 15px,
+  $color: #333,
+  $background-color: #fff,
+  $font-size: 14px,
+  $border-radius: 4px,
+  $border: 1px solid #ddd
+) {
   width: $width;
   padding: $padding-tb 10px;
   color: $color;
