--- a/step-02/src/js/components/CssTest/index.scss
+++ b/step-02/src/js/components/CssTest/index.scss
@@ -5,12 +5,12 @@
   span {
     line-height: 1;
   }
-  @mixin btn 200px, 10px;
+  @include btn(200px, 10px);
   i {
     color: $main-color;
   }
   &:hover {
-    @mixin btn 200px, 10px, $white, $main-color, 14px, 4px, 1px solid $main-color;
+    @include btn (200px, 10px, $white, $main-color, 14px, 4px, 1px solid $main-color);
     i {
       color: $white;
     }
